<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chache.test.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoLinea"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoParada"
        android:id="@+id/textView2"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoDestino"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoHora"
        android:id="@+id/textView4"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonProgramarAlarma"
        android:id="@+id/buttonSetAlarm"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerHora"
        android:layout_above="@+id/buttonSetAlarm"
        android:spinnerMode="dropdown"
        android:layout_alignRight="@+id/buttonSetAlarm"
        android:layout_alignEnd="@+id/buttonSetAlarm"
        android:layout_alignLeft="@+id/buttonSetAlarm"
        android:layout_alignStart="@+id/buttonSetAlarm"
        android:layout_alignTop="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editParada"
        android:text="@string/editParada"
        android:inputType="number"
        android:textStyle="normal"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/spinnerLinea"
        android:layout_alignEnd="@+id/spinnerLinea"
        android:layout_alignLeft="@+id/spinnerHora"
        android:layout_alignStart="@+id/spinnerHora" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLinea"
        android:layout_above="@+id/textView2"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/spinnerHora"
        android:layout_alignStart="@+id/spinnerHora"
        android:layout_alignRight="@+id/spinnerHora"
        android:layout_alignEnd="@+id/spinnerHora" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuscar"
        android:id="@+id/btnBuscar"
        android:layout_alignBottom="@+id/editParada"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDestino"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/editParada"
        android:layout_alignStart="@+id/editParada"
        android:layout_alignRight="@+id/editParada"
        android:layout_alignEnd="@+id/editParada"
        android:layout_alignTop="@+id/textView3"
        android:spinnerMode="dropdown" />

</RelativeLayout>
